syntax = "proto3";

package de.ruoff.consistency.service.notification;
option java_multiple_files = true;

service NotificationService {
    rpc StreamInvitations(PlayerRequest) returns (stream InvitationNotification);
    rpc StreamScores(PlayerRequest) returns (stream ScoreNotification);
}

message PlayerRequest {
    string username = 1;
}

message InvitationNotification {
    string sessionId = 1;
    string requester = 2;
}

message ScoreNotification {
    string username = 1;
    int32 score = 2;
}
